--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.876.0",
+    "@aws-sdk/s3-request-presigner": "^3.876.0",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
