--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "body-parser": "^2.2.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.4",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
+    "path": "^0.12.7",
     "uuidv4": "^6.2.13",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
