--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT = 5000
 JWT_SECRET=jwt_secret
 REFRESH_SECRET=refresh_secret
-MONGO_URI = mongodb://localhost:27017/romaa
-# MONGO_URI = mongodb+srv://rdkumar881:rdkumar881@cluster0.iaezxnr.mongodb.net/romaa
+# MONGO_URI = mongodb://localhost:27017/romaa
+MONGO_URI = mongodb+srv://rdkumar881:rdkumar881@cluster0.iaezxnr.mongodb.net/romaa
 LOGGER_FILE_NAME=logs/apps-%DATE%.log
 LOGGER_DATE_PATTERN=YYYY-MM-DD
 LOGGER_MAX_FILE_SIZE=20m
