--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 PORT = 5000
-JWT_SECRET=jwt_secret
-REFRESH_SECRET=refresh_secret
+NODE_ENV=dev
+ACCESS_TOKEN_SECRET=Th!s_Is_INFRAA_S3cr3t_K3y_For_JWT_@27Anton!
+REFRESH_TOKEN_SECRET=T0P_SECRET_K3y_F0r_Infraa!Tech_
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_EXPIRY=10d
 # MONGO_URI = mongodb://localhost:27017/romaa
 MONGO_URI = mongodb+srv://rdkumar881:rdkumar881@cluster0.iaezxnr.mongodb.net/romaa
 LOGGER_FILE_NAME=logs/apps-%DATE%.log
