Implement employee forgot password functionality using OTP and email sending.

--- a/.env
+++ b/.env
@@ -14,3 +14,9 @@ LOGGER_LEVEL=info
 CORS_ORIGIN=["http://localhost:3000"]
 CORS_METHODS=["GET", "POST", "PUT", "DELETE"]
 CORS_HEADERS=["Content-Type", "Authorization"]
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+# Port 587 is standard for TLS (secure: false)
+# Port 465 is for SSL (secure: true)
+SMTP_USER=rdkumar881@gmail.com
+SMTP_PASS=zobh qdcw qnnm huwl
