--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^8.16.4",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.13",
     "nodemon": "^3.1.10",
     "path": "^0.12.7",
     "uuidv4": "^6.2.13",
