--- a/.env
+++ b/.env
@@ -20,3 +20,4 @@ SMTP_PORT=465
 # Port 465 is for SSL (secure: true)
 SMTP_USER=rdkumar881@gmail.com
 SMTP_PASS=zobh qdcw qnnm huwl
+FRONTEND_URL=https://relaxed-starburst-6352fa.netlify.app
