Centralize AWS S3 upload functionality into a new utility, update AWS SDK, and add user attendance photo upload.

--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ SMTP_PORT=465
 SMTP_USER=rdkumar881@gmail.com
 SMTP_PASS=zobh qdcw qnnm huwl
 FRONTEND_URL=https://relaxed-starburst-6352fa.netlify.app
-# AWS_ACCESS_KEY_ID=AKIARNDL6DYAXRHCA44H
-# AWS_SECRET_ACCESS_KEY=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
-# AWS_REGION=ap-south-1
-# AWS_S3_BUCKET=romaafiles
+AWS_ACCESS_KEY_ID=AKIARNDL6DYAXRHCA44H
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=ap-south-1
+AWS_S3_BUCKET=romaafiles
